# audio_samples_io

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bench_report.py  benchmark_summary.md  flac_benches.ipynb  generate_report.sh  pyproject.toml
.cargo/: config.toml
benches/: flac_benchmark_summary.md  flac_rw.rs  wav_rw.rs
benches/C/: bench_flac.c  bench_sndfile.c  flac_bench.csv  makefile
examples/: channels.rs  flac.rs  flac_timing.rs  wav.rs
resources/: test.flac
src/: error.rs  format_conversion.rs  lib.rs  python.rs  streaming.rs  traits.rs  types.rs
src/aiff/: aiff_file.rs  extended.rs  mod.rs
src/flac/: bitstream.rs  constants.rs  crc.rs  data.rs  error.rs  flac_file.rs  frame.rs  lpc.rs  metadata.rs  mod.rs  rice.rs  streaming.rs  streaming_writer.rs  subframe.rs
src/wav/: adpcm.rs  bext.rs  chunks.rs  companding.rs  cue.rs  data.rs  ds64.rs  error.rs  fact.rs  fmt.rs  header.rs  list_info.rs  mod.rs  smpl.rs  streaming.rs  streaming_sink.rs  streaming_writer.rs  wav_file.rs
tests/: aiff_rw.rs  flac_write_streaming.rs  format_detection.rs  wav_read.rs  wav_rf64.rs  wav_robustness.rs  wav_write.rs
