[package]
name = "audio_samples_io"
version = "0.1.4"
edition = "2024"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A Rust library for audio input and output operations."
repository = "https://github.com/jmg049/audio_samples_io"
homepage = "https://jmg049.github.io/audio_samples_io"
documentation = "https://docs.rs/audio_samples_io"
keywords = ["audio", "io"]
categories = ["encoding", "multimedia", "science"]
exclude = ["/examples/*", "/tests/*", "/target/*", "/benches/*", "*.wav", "*.flac"]

[dependencies]
audio_samples = { path = "../audio_samples", default-features = false, features = ["editing", "random-generation", "resampling"]}
colored = { version = "3.0.0", optional = true }
memmap2 = "0.9.9"
thiserror = "2.0.18"
bytemuck = "1.25.0"
ndarray = "0.17.2"
chrono = { version = "0.4.42", features = ["serde"], optional = true }
sysinfo = { version = "0.38.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
walkdir = { version = "2.5.0", optional = true }
numpy = { version = "0.27.1", optional = true }
pyo3 = { version = "0.27.1", optional = true, default-features = false }
non-empty-slice = "0.5.1"
non-empty-iter = "0.2.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
hound = "3.5.0"

[features]
default = ["wav"]
colored = ["dep:colored"]
simd = ["audio_samples/simd"]
benchmark_reporting = [
    "dep:chrono",
    "dep:sysinfo",
    "dep:serde",
    "dep:serde_json",
    "dep:walkdir",
]
numpy = ["dep:numpy", "dep:pyo3"]

wav = []
flac = []

[[bench]]
name = "wav_rw"
harness = false

[[bin]]
name = "benchmark_reporter"
path = "src/bin/benchmark_reporter.rs"
