[package]
name = "audio_samples_io"
version = "0.3.2"
edition = "2024"
authors = ["Jack Geraghty <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A Rust library for audio input and output operations."
repository = "https://github.com/jmg049/audio_samples_io"
homepage = "https://jmg049.github.io/audio_samples_io"
documentation = "https://docs.rs/audio_samples_io"
keywords = ["audio", "io"]
categories = ["encoding", "multimedia", "science"]
exclude = ["/examples/*", "/tests/*", "/target/*", "/benches/*", "*.wav", "*.flac"]

[dependencies]
audio_samples = { path = "../audio_samples" }
colored = { version = "3.0.0", optional = true }
memmap2 = "0.9.10"
thiserror = "2.0.18"
bytemuck = "1.25.0"
ndarray = "0.17.2"
chrono = { version = "0.4.44", features = ["serde"], optional = true }
sysinfo = { version = "0.39.3", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
walkdir = { version = "2.5.0", optional = true }
numpy = { version = "0.28", optional = true }
pyo3 = { version = "0.28.3", optional = true, default-features = false }
non-empty-slice = "0.6.0"
non-empty-iter = "0.3.1"
rayon = { version = "1", optional = true }

[dev-dependencies]
audio_samples = { path = "../audio_samples", features = ["editing", "resampling"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
hound = "3.5.0"
symphonia = { version = "0.6", default-features = false, features = ["flac"] }

[features]
default = ["wav"]
# Full features does not include simd since that requires nightly Rust, numpy is not included since that is specific to building for python, and benchmark_reporting is not included since that is only needed for generating benchmark reports
full = ["wav", "flac", "aiff", "flac-parallel", "colored"]
colored = ["dep:colored"]
simd = ["audio_samples/simd"]
flac-parallel = ["dep:rayon"]
benchmark_reporting = [
    "dep:chrono",
    "dep:sysinfo",
    "dep:serde",
    "dep:serde_json",
    "dep:walkdir",
]
numpy = ["dep:numpy", "dep:pyo3"]

wav = []
flac = []
aiff = []
resampling = ["audio_samples/resampling"]
[[bench]]
name = "wav_rw"
harness = false
required-features = ["wav"]

[[bench]]
name = "flac_rw"
harness = false
required-features = ["flac"]

[[bin]]
name = "benchmark_reporter"
path = "src/bin/benchmark_reporter.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
